--- a/pajaro/08_vh_vw.html
+++ b/pajaro/08_vh_vw.html
@@ -28,6 +28,20 @@
             color: bisque;
         }
 
+    .btn{
+        display: inline-block;
+        text-decoration: none;
+        background-color: burlywood;
+        padding: 0.75rem 2rem;
+        color: black;
+        border-radius: 10px;
+        
+    }
+    .btn:hover{
+            background-color: black;
+            color: burlywood;
+        }
+
     </style>
 </head>
 <body>
