--- a/pajaro/pajaro.html
+++ b/pajaro/pajaro.html
@@ -168,7 +168,7 @@
 
       .globe .bird .body .eye{
           position: absolute;
-          z-index: -1;
+          z-index: 1;
           overflow: hidden;
           width: 56px;
           height: 56px;
@@ -284,7 +284,101 @@
           left: 20px;
           border-radius: 50%;
           background-color: #fff;
+
+
       }
+
+      .globe .bird .body .feet{
+        position: absolute;
+        bottom: 15px;
+        width: 100%;
+      }
+
+      .globe .bird .body .feet:before, .globe .bird .body .feet::after{
+        position: absolute;
+        content: "";
+        width: 27px;
+        height: 21px;
+        border-radius: 50%;
+        background-color: #f8c14d;
+        box-shadow: inset 0 0 12px rgba (0, 0, 0, 0.2);
+      }
+      .globe .bird .body .feet::before{
+        left: 40px;
+      }
+
+      .globe .bird .body .feet::after{
+        right: 40px;
+      }
+
+      .globe .cloud{
+        position: absolute;
+        width: 70px;
+        height: 24px;
+        background: -webkit-linear-gradient(top, #f2f9fe 5%, #d6f0fd 100%);
+        background: linear-gradient(to bottom, #f2f9fe 5%, #d6f0fd 100%);
+        border-radius: 20px;
+        top: -20px;
+        z-index: -1;
+      }
+
+      .globe .cloud:before, .globe .cloud:after{
+        position:absolute;
+        content: "";
+        background: inherit;
+        z-index: -1;
+
+      }
+
+      .globe .cloud:before {
+        width: 36px;
+        height: 36px;
+        top: -18px;
+        right: 10px;
+        border-radius: 40px;
+      }
+      .globe .cloud:after{
+        width: 20px;
+        height: 20px;
+        top: -10px;
+        left: 10px;
+        border-radius: 20px;
+      }
+
+    @keyframes eyes {
+     0%,
+     8.88889%,
+     100% {
+     top: -50px;
+     }
+
+     17.77778% {
+     top: -45px;
+     }
+
+     91.11111% {
+        top: -20px;
+     }
+
+     57.77778%,
+     88.88889% {
+        top: -15px;
+    }
+
+    66.66667% {
+       top: -25px;
+    }
+
+    }
+   .globe .bird .body .eye:after{
+    -webkit-animation: eyes 4.5s linear infinite;
+     animation: eyes 4.5s linear infinite;
+   }
+
+
+
+      
+      
     </style>
   </head>
 
