--- a/flex_trabajo -desde_web/flexbox .html
+++ b/flex_trabajo -desde_web/flexbox .html
@@ -44,7 +44,75 @@
   width: 900px;
   height: 300px;
   display: flex;
-  justify-content: space-between;}
+  justify-content: space-between;
+  align-items: center;
+  
+}
+.photo-grid-container {
+  display: flex;
+  justify-content: center;
+}
+
+.photo-grid {
+  width: 900px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+}
+
+.photo-grid-item {
+  border: 1px solid #fff;
+  width: 300px;
+  height: 300px;
+}
+
+.first-item {
+  order: 1;
+}
+
+.last-item {
+  order: -1;
+}
+
+.social,
+.subscribe {
+  align-self: flex-end;
+  margin-bottom: 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-item {
+  border: 1px solid #fff;
+  background-color: #D6E9FE;
+  height: 200px;
+  flex: 1;
+}
+
+.footer-one,
+
+.footer-three {
+  background-color: #5995DA;
+  flex: initial;
+  width: 300px;
+}
+
+.footer-three {
+  flex: 2;
+}
+.signup {
+  margin-left: auto;
+}
+
+
+
+
+
 
     </style>
   </head>
@@ -53,27 +121,61 @@
 
   <body>
 
-    <div class="menu-container">
+    <div class='menu-container'>
+      <div class='menu'>
+        <div class='date'>Aug 14, 2016</div>
+        <div class='signup'>Sign Up</div>
+        <div class='login'>Login</div>
+      </div>
+    </div>
 
-        <div class="header-container">
-            <div class="header">
-                <div class="subscribe">Suscribe &#9662</div>
-                <div class="logo"><img src="imagen/awesome-logo.svg" alt=""></div>
-                <div class="social"><img src="images/social-icons.svg" alt=""></div>
+    <div class='header-container'>
 
-            </div>
+      <div class='header'>
 
-        </div>
+        <div class='subscribe'>Subscribe &#9662;</div>
+        <div class='logo'><img src='images/awesome-logo.svg'/></div>
+        <div class='social'><img src='images/social-icons.svg'/></div>
+      
+      </div>
 
-      <div class="menu">
-        <div class="date">Aug 14, 2016</div>
-        <div class="links">
-         <div class="signup">Sign Up</div>
-         <div class="login">Login</div>
     </div>
 
 
+
+    <div class='photo-grid-container'>
+
+      <div class='photo-grid'>
+
+        <div class='photo-grid-item first-item'>
+          <img src='images/one.svg'/>
+        </div>
+
+        <div class='photo-grid-item'>
+          <img src='images/two.svg'/>
+        </div>
+
+        <div class='photo-grid-item'>
+          <img src='images/three.svg'/>
+        </div>
+
+        <div class='photo-grid-item'>
+          <img src='images/four.svg'/>
+        </div>
+
+        <div class='photo-grid-item last-item'>
+          <img src='images/five.svg'/>
+        </div>
+
       </div>
+
+    </div><!--aqui termina y comienza el footer-->
+
+    <div class="footer">
+
+      <div class="footer-item footer-one"></div>
+      <div class="footer-item footer-two"></div>
+      <div class="footer-item footer-three"></div>
 
     </div>
 
