--- a/flex-header/index.html
+++ b/flex-header/index.html
@@ -17,6 +17,8 @@
 
       <div class="header" >
 
+        <div class="start">
+
       <div class="logo">LOGO</div>
 
       <ul class="links">
@@ -24,17 +26,17 @@
         <li><a href="#">link-dos</a></li>
         <li><a href="#">link-tres</a></li>
       </ul>
-       </div>
-     <!--aqui es la segunda parte al end-->
+      </div>
+    <!--aqui comienza  notificacion y bolita-->
       <div class="end">
 
-      <button class="notifications">1 notificación nueva</button>
+      <button class="button">1 notificación nueva</button>
 
       <div class="profile-image"></div>
     
+     </div>
+
     </div>
-
-
     </div>
 
 
