--- a/hamburger-menu/hamburger-menu.html
+++ b/hamburger-menu/hamburger-menu.html
@@ -18,8 +18,8 @@
         top: 0;
         left: 0;
         z-index: 2;
-        height: 60px;
-        width: 60px;
+        height: var(--hamburger-size);
+        width: var(--hamburger-size);
         cursor: pointer;
 
         
@@ -48,6 +48,48 @@
       transform:translateX(0);/*este es la segunda parte del efecto*/
       
      }
+
+     /*contenedor para el icono del menu*/
+     .menu-container .hamburger{
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 2;
+      width: var(--hamburger-size);
+      height: var(--hamburger-size);
+      background-color: var(--color-secundario);
+      padding: 0.5rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+     }
+     /*dibujar las lineas del menu*/
+     .menu-container .hamburger >div{
+      position: relative;
+      background-color: white;
+      width: 100%;
+      height: 2px;
+      }
+
+      .menu-container .hamburger >div::before{
+      content: "";
+      position: absolute;    
+      background-color: inherit;
+      width: 100%;
+      height: 2px;
+      top: -10px;
+      }
+
+      .menu-container .hamburger >div::after{
+      content: "";
+      position: absolute;    
+      background-color: inherit;
+      width: 100%;
+      height: 2px;
+      top: 10px;
+      }
+
 
     </style>
   </head>
